--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	<![endif]-->
 </head>
 <body>
-	<input type="file" id="upload">
+	<input type="file" id="upload"><br>
+	<label for="max-size">Maximum image size</label>
+	<input type="number" id="max-size" value="128"><br>
 	<button id="go">Go</button>
 </body>
 </html>
